--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 quarkus.swagger-ui.always-include=true
-quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=postgres
-quarkus.datasource.password=postgres
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
-quarkus.hibernate-orm.database.generation=update
-quarkus.hibernate-orm.log.sql=true
+quarkus.datasource.db-kind = postgresql
+quarkus.datasource.username = postgres
+quarkus.datasource.password = postgres
+quarkus.datasource.reactive.url = vertx-reactive:postgresql://localhost:5432/postgres
+quarkus.hibernate-orm.schema-management.strategy =update
+
+quarkus.http.port=8500
